--- a/templates/customer/track_id.html.twig
+++ b/templates/customer/track_id.html.twig
@@ -5,6 +5,12 @@
 
     <section id="postal-banner" class="section postal-banner">
         <div class="container">
+
+        
+            {% for crumbsKey, crumbsValue in breadcrumbs %}
+                <a href={{ crumbsValue }}>{{ crumbsKey}}</a> <strong>/</strong>
+            {% endfor %}
+
             <div class="title">Viewing Package Tracking</div>
             <div class="subtitle">For Package {{ id }}</div>
         </div>
