--- a/templates/customer/dashboard.html.twig
+++ b/templates/customer/dashboard.html.twig
@@ -77,7 +77,7 @@
                                         <p>Most-recently updated packages</p>
                                     </div>
                                     <div class="message-body">
-                                        <p>You currently have no orders. <br/>
+                                        <p>You currently have no tracked orders. <br/>
                                         Ship a package now through <a href=""><strong>Packages</strong></a>.
                                         </p>
                                     </div>
