--- a/templates/employee_layout.html.twig
+++ b/templates/employee_layout.html.twig
@@ -3,9 +3,9 @@
 {% block body %}
 
 <nav class="navbar dashbar is-dark" role="navigation" aria-label="main navigation">
-<div class="container">
+
   <div class="navbar-brand ">
-    <a class="navbar-item postal-brand">
+    <a class="navbar-item postal-brand" href="{{ path('app-employee-home')}}">
     Courier.PO
     </a>
 
@@ -18,12 +18,12 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" >
-        My Orders
+      <a class="navbar-item" href="{{ path('app-employee-deliver') }}">
+        My Delivery
       </a>
 
       <a class="navbar-item" href="">
-        Ship Package
+        Manage Packages
       </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
@@ -33,34 +33,63 @@
 
         <div class="navbar-dropdown">
           <a class="navbar-item">
-            About
+            View Office Vehicles
           </a>
-          <a class="navbar-item">
-            Jobs
-          </a>
-          <a class="navbar-item">
-            Contact
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            Report an issue
-          </a>
+         
         </div>
       </div>
     </div>
 
-    <div class="navbar-end">
+    
+<div class="navbar-end">
       <div class="navbar-item">
+        <div class="navbar-item disabled" style="color: #fff;">
+          Signed In As
+        </div>
+
+
         <div class="buttons">
-          <a class="button postal-button">
-            Profile
+
+
+
+      <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link button is-primary">
+          <strong>
+            {% if name is defined %}
+
+              {{ name }}
+
+            {% else %}
+
+              Unknown User
+
+            {% endif %}
+          </strong>
           </a>
 
-          {{ form(logout) }}
+
+        <div class="navbar-dropdown">
+          <div class="dropdown-content">
+          <a class="navbar-item" href="{{ path('app-employee-profile') }}">
+            Account
+          </a>
+          <a class="navbar-item">
+            Messages
+          </a>
+          <a class="navbar-item">
+            Settings
+          </a>
+          </div>
         </div>
+        </div>
+        
+          {{ form(logout) }}
+
+
       </div>
     </div>
-  </div>
+
+
   </div>
 </nav>
 
