--- a/templates/employee/apply.html.twig
+++ b/templates/employee/apply.html.twig
@@ -15,13 +15,15 @@
         {{ parent() }}
     </section>  
 
-    <section class="section">
+  <section id="postal-banner" class="section postal-banner">
         <div class="container">
-            <div class="subtitle">
-                Create your employee profile.
-            </div>
+
+            <div class="title">Apply as a Courier</div>
+            <div class="subtitle">Ready to be a courier? Register below!<br/></div>
         </div>
+
     </section>
+
 
     <section class="section is-small">
         <div class="container">
