--- a/templates/home/order.html.twig
+++ b/templates/home/order.html.twig
@@ -15,19 +15,15 @@
         {{ parent() }}
     </section>
 
-    <section class="section">
+    <section id="postal-banner" class="section postal-banner">
         <div class="container">
-            <div class="subtitle">
-                Create and Ship A Package
-            </div>
+
+            <div class="title">Create a Courier.PO Package</div>
+            <div class="subtitle">Describe your shipping details and needs. <br/><small>Or you can sign in and keep track of all your Courier.PO transactions!</small></div>
         </div>
+
     </section>
 
-    <section class="section is-small">
-        <div class="container">
-            {{ form(package) }}
-        </div>
-    </section>
-
+    
 
 {% endblock %}
