--- a/templates/employee/profile.html.twig
+++ b/templates/employee/profile.html.twig
@@ -1,4 +1,4 @@
-{%  extends 'customer_layout.html.twig' %}
+{%  extends 'employee_layout.html.twig' %}
 
 {% block title %}
 {{ parent() }} - Account
@@ -13,28 +13,19 @@
 {% block body %}
     {{ parent() }}
     
-    <section class="hero">
-    </section>  
-
-    <section class="section">
+    <section id="postal-banner" class="section postal-employee-banner">
         <div class="container">
-            <div class="subtitle">
-                
-            </div>
-        </div>
-    </section>
-
-    <section class="section is-small">
-        <div class="container">
-        <div class="columns">
-
-            <div class="column is-three-quarters">
-
-
-            </div>
+            <div>
             
+            {% for crumbsKey, crumbsValue in breadcrumbs %}
+                <a href={{ crumbsValue }}>{{ crumbsKey}}</a> <strong>/</strong>
+            {% endfor %}
+            
+            </div>
+            <div class="title">Your Courier.PO Profile</div>
+            <div class="subtitle">Employee ID: {{ id }}</div>
         </div>
-        </div>
+
     </section>
     
 {% endblock %}
