--- a/templates/employee_layout.html.twig
+++ b/templates/employee_layout.html.twig
@@ -18,14 +18,16 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
+      <a class="navbar-item" href="{{ path('app-employee-office') }}">
+        View Office
+      </a>
+
+      <a class="navbar-item" href="{{ path('app-employee-manage-office') }}">
+        Manage Office
+      </a>
       <a class="navbar-item" href="{{ path('app-employee-deliver') }}">
-        My Delivery
+        Start Delivery
       </a>
-
-      <a class="navbar-item" href="">
-        Manage Packages
-      </a>
-
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
           Actions
@@ -33,9 +35,8 @@
 
         <div class="navbar-dropdown">
           <a class="navbar-item">
-            View Office Vehicles
+            View CourierPO Reports
           </a>
-         
         </div>
       </div>
     </div>
