--- a/templates/home-layout.html.twig
+++ b/templates/home-layout.html.twig
@@ -49,7 +49,7 @@
                         </div>
                         <div class="dropdown-menu" id="dropdown-menu" role="menu">
                                 <div class="dropdown-content">
-                                    <a href="{{ path('app-ship-order') }}" class="dropdown-item">
+                                    <a href="{{ path('app-home-create-package') }}" class="dropdown-item">
                                         Create A Package
                                     </a>
                                 </div>
