--- a/templates/home/register.html.twig
+++ b/templates/home/register.html.twig
@@ -15,12 +15,14 @@
         {{ parent() }}
     </section>  
 
-    <section class="section">
+
+    <section id="postal-banner" class="section postal-banner">
         <div class="container">
-            <div class="subtitle">
-                Create Your Account
-            </div>
+
+            <div class="title">Welcome to Courier.PO!</div>
+            <div class="subtitle">Fill out the form below to create a free account and get started!<br/><small></small></div>
         </div>
+
     </section>
 
     <section class="section is-small">
@@ -36,5 +38,22 @@
         </div>
         </div>
     </section>
+
+    <div class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+        <header class="modal-card-head">
+        <p class="modal-card-title">Modal title</p>
+        <button class="delete" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">
+        <!-- Content ... -->
+        </section>
+        <footer class="modal-card-foot">
+        <button class="button is-success">Save changes</button>
+        <button class="button">Cancel</button>
+        </footer>
+    </div>
+    </div>
     
 {% endblock %}
